src/objects/DMAPP__DM_Account_Plan__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Actions_Ratio__c</fullName>
        <formula>IF(DMAPP__Open_Actions__c + DMAPP__Overdue_Actions__c != 0, (DMAPP__Open_Actions__c) / (DMAPP__Open_Actions__c + DMAPP__Overdue_Actions__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions Ratio (DEPRECATED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Activity_Batch_Execution_Date__c</fullName>
        <label>Activity Batch Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__Auto_Chat__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Post Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Batch_Execution_Date__c</fullName>
        <label>Batch Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__CollaborationGroupId__c</fullName>
        <description>The id of the chatter group</description>
        <inlineHelpText>The id of the chatter group</inlineHelpText>
        <label>CollaborationGroupId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Completed_Actions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completed Actions (DEPRECATED)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Days_In_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days In Plan (DEPRECATED)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__From_Date__c</fullName>
        <label>From Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__LOR_Completion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LOR Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__New_Actions_Ratio__c</fullName>
        <label>Actions Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Number_Of_Days_Accessed__c</fullName>
        <label>Number Of Days Accessed (DEPRECATED)</label>
        <summarizedField>DMAPP__AM_Plan_Team__c.DMAPP__Number_Of_Days_Accessed__c</summarizedField>
        <summaryForeignKey>DMAPP__AM_Plan_Team__c.DMAPP__Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Number_Of_Plan_Members__c</fullName>
        <label>Number Of Plan Members</label>
        <summaryForeignKey>DMAPP__AM_Plan_Team__c.DMAPP__Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Objectives_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Objectives Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Open_Actions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Actions (DEPRECATED)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Overdue_Actions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overdue Actions (DEPRECATED)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Details_Attainment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Plan Details Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan Type</label>
        <referenceTo>DMAPP__Plan_Type__c</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political_Map_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Political Map Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Total__c</fullName>
        <label>Potential Total</label>
        <summarizedField>DMAPP__AM_Plan_Unit__c.DMAPP__Potential_Total__c</summarizedField>
        <summaryForeignKey>DMAPP__AM_Plan_Unit__c.DMAPP__Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Revenue_Target__c</fullName>
        <label>Revenue Target</label>
        <summarizedField>DMAPP__AM_Plan_Revenue_Target__c.DMAPP__Revenue_Target__c</summarizedField>
        <summaryForeignKey>DMAPP__AM_Plan_Revenue_Target__c.DMAPP__Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Scorecard_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scorecard Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Segmentation_Completion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Segmentation Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <formula>IF (TODAY() &gt; DMAPP__To_Date__c, &apos;closed&apos;, &apos;open&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategy_Map_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Strategy Map Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sum_Of_Members_Access_Ratio__c</fullName>
        <label>Sum Of Members Access Ratio</label>
        <summarizedField>DMAPP__AM_Plan_Team__c.DMAPP__Plan_Access_Ratio__c</summarizedField>
        <summaryForeignKey>DMAPP__AM_Plan_Team__c.DMAPP__Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Targeted_Solutions__c</fullName>
        <label>Targeted Solutions</label>
        <summaryFilterItems>
            <field>DMAPP__AM_Plan_Solution__c.DMAPP__Targeted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DMAPP__AM_Plan_Solution__c.DMAPP__Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Targeted_Units__c</fullName>
        <label>Targeted Units</label>
        <summaryFilterItems>
            <field>DMAPP__AM_Plan_Unit__c.DMAPP__Targeted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DMAPP__AM_Plan_Unit__c.DMAPP__Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Team_Plan_Access_Ratio__c</fullName>
        <formula>IF( OR( ISBLANK(DMAPP__Sum_Of_Members_Access_Ratio__c), ISBLANK(DMAPP__Number_Of_Plan_Members__c), DMAPP__Number_Of_Plan_Members__c == 0), 0, (DMAPP__Sum_Of_Members_Access_Ratio__c /  DMAPP__Number_Of_Plan_Members__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Plan Access Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__To_Date__c</fullName>
        <label>To Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Untargeted_Units__c</fullName>
        <label>Untargeted Units</label>
        <summaryFilterItems>
            <field>DMAPP__AM_Plan_Unit__c.DMAPP__Targeted__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>DMAPP__AM_Plan_Unit__c.DMAPP__Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates the user who last updated the Account Plan in Dealmaker.  This field does not reflect changes made outside of Dealmaker that may impact the Account Plan, for example, deleting an opportunity in Salesforce but not in Dealmaker would not update this field.</description>
        <inlineHelpText>This field indicates the user who last updated the Account Plan in Dealmaker.  This field does not reflect changes made outside of Dealmaker that may impact the Account Plan, for example, deleting an opportunity in Salesforce would not update this field.</inlineHelpText>
        <label>Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Updated__c</fullName>
        <description>This field indicates the update time of the Account Plan in Dealmaker. This field does not reflect changes made outside of Dealmaker that may impact the Account Plan, for example, deleting an opportunity in Salesforce but not in Dealmaker would not update this field.</description>
        <inlineHelpText>This field indicates the update time of the Account Plan in Dealmaker. This field does not reflect changes made outside of Dealmaker that may impact the Account Plan, for example, deleting an opportunity in Salesforce would not update this field.</inlineHelpText>
        <label>Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Map_Completion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value Map Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__White_Space__c</fullName>
        <defaultValue>0</defaultValue>
        <label>White Space Cover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Account Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>